objects/State__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The country that this state is in.</description>
        <inlineHelpText>The country that this state is in.</inlineHelpText>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>States</relationshipLabel>
        <relationshipName>States</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StateAbbr__c</fullName>
        <label>State Abbreviation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateEID__c</fullName>
        <description>The Enterprise ID for this State.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this State.</inlineHelpText>
        <label>State EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>State</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>State Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>States</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>